[tool.poetry]
name = "structure"
version = "0.1.0"
description = ""
authors = ["Leonardo Grava de Mendonça <leonardo.grava@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
gevent = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
